# P7-forma-IRC

./: .gitignore  Readme.md  pyproject.toml
src/: 1-data-prep.ipynb  2-analysis.ipynb  utils.py
