[tool.poetry]
name = "p7-forma-irc"
version = "0.1.0"
description = ""
authors = ["Selim Raboudi <selim.raboudi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
openpyxl = "^3.0.10"
scipy = "^1.9.3"
plotly = "^5.11.0"
nbformat = "^5.7.0"
six = "^1.16.0"
Jinja2 = "^3.1.2"
statsmodels = "^0.13.5"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
